// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveCatalogItemModal should correctly render modal for duplicate catalog items 1`] = `
<div>
  <div
    class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade warning-modal-body"
  >
    <div>
      <h4>
        Are you sure you want to permanently delete the following catalog item?
      </h4>
      <ul>
        <li>
          <h4>
            <strong>
              name123
            </strong>
          </h4>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`RemoveCatalogItemModal should correctly render modal for multiple catalog items 1`] = `
<div>
  <div
    class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade warning-modal-body"
  >
    <div>
      <h4>
        Are you sure you want to permanently delete the following catalog item?
      </h4>
      <ul>
        <li>
          <h4>
            <strong>
              name123
            </strong>
          </h4>
        </li>
        <li>
          <h4>
            <strong>
              name456
            </strong>
          </h4>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`RemoveCatalogItemModal should correctly render modal for single catalog item 1`] = `
<div>
  <div
    class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade warning-modal-body"
  >
    <div>
      <h4>
        Are you sure you want to permanently delete the following catalog item?
      </h4>
      <ul>
        <li>
          <h4>
            <strong>
              name123
            </strong>
          </h4>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
